syntax = "proto3";

package com.example.internalapi.request.publisher.create.proto;

option java_multiple_files = true;

import "com/example/internalapi/model/publisher.proto";

message GetAllPublishersRequest {

}

message GetAllPublishersResponse {
  oneof response {
    Success success = 1;
  }

  message Success {
    example.internalapi.model.PublisherList publishers = 1;
  }
}
